#854 - fix overflowing hero image in ie11

--- a/frontend/scss/molecules/_m-article-header.scss
+++ b/frontend/scss/molecules/_m-article-header.scss
@@ -343,6 +343,7 @@
   width: 100vw;
   height: 100%;
   margin-left: -50vw;
+  overflow: hidden;
 }
 
 .m-article-header--hero .m-article-header__img::after {
